--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\user\\Documents\\Proyectos Angel Limas\\Coral_Joyeria\\ExtLibs\\selenium-server-standalone-3.141.59.jar","type":"JAR","hints":{}},"org.yaml.snakeyaml:org.yaml.snakeyaml:1.19.0"],[{"location":"C:\\Users\\user\\Documents\\Eclipse Automation\\plugins\\org.testng_6.14.3.r201802240500.jar","type":"JAR","hints":{}},"org.testng:org.testng:6.14.3"]]
