--- a/Coral_Joyeria/.classpath
+++ b/Coral_Joyeria/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Page Objects"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/user/Documents/Proyectos Angel Limas/Coral_Joyeria/ExtLibs/byte-buddy-1.8.15.jar"/>
 	<classpathentry kind="lib" path="C:/Users/user/Documents/Proyectos Angel Limas/Coral_Joyeria/ExtLibs/commons-exec-1.3.jar"/>
